[gd_scene load_steps=40 format=3 uid="uid://c0wk5m78ls2l0"]

[ext_resource type="Script" uid="uid://tlb8n55tqsv4" path="res://scripts/guy.gd" id="1_t5i7a"]
[ext_resource type="Texture2D" uid="uid://cxmuuy6powchx" path="res://Assets/spritesheets/guy jump.png" id="2_if2c8"]
[ext_resource type="Texture2D" uid="uid://ds8k4k8yxdawu" path="res://Assets/spritesheets/guy walk.png" id="2_t5i7a"]
[ext_resource type="Texture2D" uid="uid://cee3vxfk5hi8t" path="res://Assets/spritesheets/guy_idle.png" id="2_utamp"]
[ext_resource type="Texture2D" uid="uid://v6bwrtyy18kh" path="res://Assets/spritesheets/guy crouch.png" id="2_x1pox"]
[ext_resource type="Texture2D" uid="uid://du2nqhojsfh7m" path="res://Assets/spritesheets/guy lp 2.png" id="4_0xkuq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xfmiu"]
size = Vector2(0, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_5we3j"]
atlas = ExtResource("2_x1pox")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkbuq"]
atlas = ExtResource("2_x1pox")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cuhb6"]
atlas = ExtResource("2_x1pox")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbvv4"]
atlas = ExtResource("2_x1pox")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcota"]
atlas = ExtResource("2_x1pox")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ctbe"]
atlas = ExtResource("2_x1pox")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wto2p"]
atlas = ExtResource("2_x1pox")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0akn"]
atlas = ExtResource("2_x1pox")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbq5y"]
atlas = ExtResource("2_if2c8")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bt7gg"]
atlas = ExtResource("2_if2c8")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrth3"]
atlas = ExtResource("2_if2c8")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnqlw"]
atlas = ExtResource("2_if2c8")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sqvr"]
atlas = ExtResource("2_if2c8")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3pb0"]
atlas = ExtResource("2_if2c8")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dk3hk"]
atlas = ExtResource("4_0xkuq")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdhm5"]
atlas = ExtResource("4_0xkuq")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntqgq"]
atlas = ExtResource("4_0xkuq")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1hx0n"]
atlas = ExtResource("2_utamp")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfmiu"]
atlas = ExtResource("2_utamp")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv4xc"]
atlas = ExtResource("2_utamp")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yld25"]
atlas = ExtResource("2_utamp")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_87i3u"]
atlas = ExtResource("2_t5i7a")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_if2c8"]
atlas = ExtResource("2_t5i7a")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1pox"]
atlas = ExtResource("2_t5i7a")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mwp5"]
atlas = ExtResource("2_t5i7a")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3sno"]
atlas = ExtResource("2_t5i7a")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxoox"]
atlas = ExtResource("2_t5i7a")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovk7x"]
atlas = ExtResource("2_t5i7a")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgoh8"]
atlas = ExtResource("2_t5i7a")
region = Rect2(128, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_1hx0n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5we3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkbuq")
}],
"loop": false,
"name": &"crouch down",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuhb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbvv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcota")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ctbe")
}],
"loop": true,
"name": &"crouch idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wto2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0akn")
}],
"loop": false,
"name": &"crouch up",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbq5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bt7gg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrth3")
}],
"loop": false,
"name": &"fall",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnqlw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sqvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3pb0")
}],
"loop": false,
"name": &"jump",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dk3hk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdhm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntqgq")
}],
"loop": false,
"name": &"lp",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1hx0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfmiu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv4xc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yld25")
}],
"loop": true,
"name": &"stand",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_87i3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_if2c8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1pox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mwp5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3sno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxoox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovk7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgoh8")
}],
"loop": true,
"name": &"walk",
"speed": 5.5
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0xkuq"]
size = Vector2(18, 55)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qlfh1"]
size = Vector2(21, 9)

[node name="Guy" type="CharacterBody2D"]
script = ExtResource("1_t5i7a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 31)
shape = SubResource("RectangleShape2D_xfmiu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1hx0n")
animation = &"lp"
autoplay = "stand"

[node name="HurtBox" type="Area2D" parent="." groups=["player1"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_0xkuq")

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(16.5, -7.5)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_qlfh1")
debug_color = Color(0.97541493, 0, 0.4230893, 0.41960785)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_exited" from="HurtBox" to="." method="_on_hurt_box_area_exited"]
